--- a/public/pod.html
+++ b/public/pod.html
@@ -23,6 +23,9 @@
     <label>Received By</label>
     <input type="text" name="received_by" required>
 
+    <label>Time of Delivery</label>
+    <input type="time" name="delivered_at_time" required>
+
     <label>POD Image (photo)</label>
     <input type="file" name="image" accept="image/*" required>
 
