--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,109 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MM Courier Dashboard</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 30px;
-      background-color: #f4f4f4;
+      margin: 0;
+      background-color: #f5f5f5;
     }
-    h1 {
-      color: #222;
+
+    header {
+      background-color: #0a2b52;
+      color: white;
+      padding: 20px;
       text-align: center;
     }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      margin-top: 20px;
-      background: white;
+
+    header img {
+      height: 50px;
+      vertical-align: middle;
     }
+
+    header h1 {
+      display: inline-block;
+      margin-left: 10px;
+      font-size: 24px;
+    }
+
+    main {
+      padding: 20px;
+    }
+
+    h2 {
+      color: #0a2b52;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      background-color: white;
+    }
+
     th, td {
-      padding: 10px;
-      border: 1px solid #ccc;
+      padding: 12px;
+      border: 1px solid #ddd;
       text-align: left;
     }
+
     th {
-      background-color: #333;
-      color: white;
-    }
-    tr:nth-child(even) {
-      background-color: #f9f9f9;
-    }
-    .logo {
-      display: block;
-      margin: 0 auto;
-      height: 80px;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Company Logo -->
-  <img
-    src="https://res.cloudinary.com/dwxgkbuln/image/upload/v1750675472/pakisa_logistics_express_pty_ltd_logo-removebg-preview_kbuvzs.png"
-    alt="MM Courier Logo"
-    class="logo"
-  >
-
-  <h1>📦 MM Courier Parcel Dashboard</h1>
-
-  <!-- Parcel Table -->
-  <table id="parcelsTable">
-    <thead>
-      <tr>
-        <th>Waybill #</th>
-        <th>Tracking #</th>
-        <th>Content</th>
-        <th>Customer</th>
-        <th>Date Received</th>
-        <th>Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- Rows will be injected by JavaScript -->
-    </tbody>
-  </table>
-
-  <script>
-    async function loadParcels() {
-      try {
-        const res = await fetch('/api/parcels');
-        const parcels = await res.json();
-
-        const tableBody = document.querySelector('#parcelsTable tbody');
-        tableBody.innerHTML = '';
-
-        if (parcels.length === 0) {
-          const row = document.createElement('tr');
-          const cell = document.createElement('td');
-          cell.colSpan = 6;
-          cell.textContent = 'No parcels found.';
-          row.appendChild(cell);
-          tableBody.appendChild(row);
-        }
-
-        parcels.forEach(parcel => {
-          const row = document.createElement('tr');
-          row.innerHTML = `
-            <td>${parcel.waybill_number || ''}</td>
-            <td>${parcel.tracking_number || ''}</td>
-            <td>${parcel.content || ''}</td>
-            <td>${parcel.customer || ''}</td>
-            <td>${parcel.received_date || ''}</td>
-            <td>${parcel.status || ''}</td>
-          `;
-          tableBody.appendChild(row);
-        });
-      } catch (err) {
-        alert("Failed to load parcels.");
-        console.error(err);
-      }
-    }
-
-    loadParcels();
-  </script>
-
-</body>
-</html>
+      background-color: #409dbc
