--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -1,54 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>MM Courier Dashboard</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #f5f5f5;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f6f9;
     }
 
-    header {
+    .topbar {
       background-color: #0a2b52;
       color: white;
+      padding: 15px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .topbar h1 {
+      margin: 0;
+      font-size: 20px;
+    }
+
+    .sidebar {
+      background-color: #0a2b52;
+      width: 250px;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      padding-top: 60px;
+      overflow-y: auto;
+      color: white;
+    }
+
+    .sidebar a {
+      display: block;
+      padding: 15px;
+      text-decoration: none;
+      color: white;
+      transition: background 0.3s;
+    }
+
+    .sidebar a:hover {
+      background-color: #409dbc;
+    }
+
+    .main {
+      margin-left: 250px;
       padding: 20px;
-      text-align: center;
     }
 
-    header img {
-      height: 50px;
-      vertical-align: middle;
-    }
-
-    header h1 {
-      display: inline-block;
-      margin-left: 10px;
-      font-size: 24px;
-    }
-
-    main {
+    .report-section {
+      background-color: white;
+      border-radius: 8px;
       padding: 20px;
+      margin-bottom: 30px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
 
-    h2 {
+    .report-section h2 {
+      margin-top: 0;
       color: #0a2b52;
+    }
+
+    .logo {
+      height: 30px;
+      margin-right: 10px;
+    }
+
+    .branding {
+      display: flex;
+      align-items: center;
     }
 
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 20px;
-      background-color: white;
+      margin-top: 10px;
     }
 
     th, td {
-      padding: 12px;
-      border: 1px solid #ddd;
+      padding: 10px;
+      border: 1px solid #ccc;
       text-align: left;
     }
 
     th {
-      background-color: #409dbc
+      background-color: #cebd80;
+      color: #0a2b52;
+    }
+  </style>
+</head>
+<body>
+  <div class="topbar">
+    <div class="branding">
+      <img src="https://res.cloudinary.com/dwxgkbuln/image/upload/v1750675472/pakisa_logistics_express_pty_ltd_logo-removebg-preview_kbuvzs.png" class="logo" alt="Logo">
+      <h1>MM Courier ERP Dashboard</h1>
+    </div>
+    <a href="login.html" style="color: white;">Logout</a>
+  </div>
+
+  <div class="sidebar">
+    <a href="#">📊 Overview</a>
+    <a href="#">📦 Daily Deliveries</a>
+    <a href="#">⚠️ Scan Exceptions</a>
+    <a href="#">👷 Driver Performance</a>
+    <a href="#">👨‍💼 Client Delivery</a>
+    <a href="#">🧾 POD Compliance</a>
+    <a href="#">💵 Billing Summary</a>
+    <a href="#">📍 Trip Sheet Summary</a>
+    <a href="#">📅 Age Analysis</a>
+  </div>
+
+  <div class="main">
+    <div class="report-section">
+      <h2>Welcome, MM Courier</h2>
+      <p>Select a report on the left to begin.</p>
+    </div>
+  </div>
+</body>
+</html>
